--- a/page3.html
+++ b/page3.html
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section form1 cid-rj2DZ6xU6m" id="form1-o">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section form1 cid-rj2DZ6xU6m" id="form1-o">
 
     
 
@@ -86,9 +86,11 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
-                    <div data-form-alert="" hidden="">Thank you - we will be contacting you soon! </div>
+                    <div data-form-alert="" hidden="">
+                        Thanks for filling out the form!
+                    </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NEnE7y2QMQChdz9DJTaWIT7sE7DRS7/4TXCKVLO2mZkYPA/zEJQXWbtReX3ANF27/LLc5jWiw/gculSDZmSWWifpu0XchHusVYiFlQ2VYAnAXkd2TiKpJrKGyKlXpzxd">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NIjw/FGZkN2A5US6t6Ot23zYLodxnwNEn/zhAW+ZIdsN6bNLR+2Uek4sU4Xqh4ZDfW5sVZa0o6jGHvihZx4TeK2p5qg22WciTtjd5WBao3WHep03kSMAXYf3seVBzhIL">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
