--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
+  <meta name="description" content="American Hop Supply is a 100% grower-owned global supplier of premium quality hops and uncompromising service. We are hop masters, beer geeks, farmers and families who share a culture of pride, partnership and innovation centered on sustainable produced hop products and brewing solutions from the Pacific Northwest." />
   <!-- Site made with Mobirise Website Builder v4.9.5, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
