--- a/page1.html
+++ b/page1.html
@@ -2,6 +2,8 @@
 <html >
 <head>
   <meta name="description" content="American Hop Supply is a 100% grower-owned global supplier of premium quality hops and uncompromising service. We are hop masters, beer geeks, farmers and families who share a culture of pride, partnership and innovation centered on sustainable produced hop products and brewing solutions from the Pacific Northwest." />
+  <meta name="keywords" content="Hops, American Hops, Pacific Northwest Hops, Craft Beer, Beer Geeks, Hop Farmers, Amarillo, Azacca, Bravo, Cascade, Cashmere, Centennial, Chinook, Citra, Comet, Crystal, CTZ, El Dorado, Ekuanot, Galena, Idaho 7, Idaho Gem, Lemondrop, Mosaic, Saaz, Simcoe, Willamette, Zappa" />
+  
   <!-- Site made with Mobirise Website Builder v4.9.5, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
